fix layout to prevent horizontal scroll

--- a/src/stylus/common.styl
+++ b/src/stylus/common.styl
@@ -11,12 +11,6 @@ a:visited
   height 100%
   width 100%
 
-.flex-container-row
-  flex-direction row
-
-.flex-container-col
-  flex-direction column
-
 .avatar
   width 45px
   height 45px
