--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -16,9 +16,8 @@ body
 .menus
   background-color menubar-background
   border-right 1px solid common-border-color
-  flex-grow 0
-  flex-shrink 0
-  flex-basis menubar-width
+  flex none
+  width menubar-width
   box-shadow inset 0 0 10px #eee
 
 .main-contents
