--- a/src/stylus/timeline.styl
+++ b/src/stylus/timeline.styl
@@ -2,8 +2,8 @@
   border-right 1px solid common-border-color
   background-color timeline-background-color
   overflow-y auto
-  flex-shrink 0
-  flex-basis timeline-width
+  flex onoe
+  width timeline-width
   .timeline-cell
     &:hover
       background-color #F2F2F2
@@ -48,7 +48,7 @@
         margin-bottom 0px
         line-height 1
       .repo
-        color default-link-color
+        color default-sub-text-color
       time
         float right
         font-size .7em
